Improve PDF to Image Converter: bugfixes, accessibility, theme toggle, and deployment docs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <div class="container">
         <!-- Header -->
         <header class="header">
-            <h1>PDF to Image Converter</h1>
+            <div class="header__top">
+                <h1>PDF to Image Converter</h1>
+                <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">
+                    <span class="theme-toggle__icon">🌙</span>
+                </button>
+            </div>
             <p class="header__description">Convert your PDF files to high-quality PNG images. Simply upload your PDF and download individual pages or all at once.</p>
         </header>
 
